--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ html {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  background-color: azure;
 }
 
 .calculator-body {
@@ -18,9 +19,19 @@ html {
   border-radius: clamp(10px, 4vw, 20px);
   box-shadow: 0 0 10px 1px rgba(var(--base-color-rgb), 0.5);
   padding: clamp(15px, 5vw, 25px);
+  background-color: aliceblue;
 }
 
-.calculator-body > div {
+.calculator-body>div {
+  display: flex;
+  gap: 20px,
+}
+
+.input-logo {
+  flex-direction: column;
+}
+
+.top-bar {
   display: flex;
 }
 
@@ -30,9 +41,26 @@ html {
   padding: 20px;
   border-radius: 10px;
   box-shadow: inset 0 0 10px 1px rgba(var(--base-color-rgb), 0.25);
-  border: 1px solid rgba(var(--base-color-rgb), 0.4);
+  border: 2px solid rgba(var(--base-color-rgb), 0.4);
+  width: 100%;
+}
+
+#calculator-input:focus {
+  background-color: rgb(122, 232, 247);
 }
 
 .calculator-button {
   flex: 1;
+  margin: 15px;
+  border-radius: 8px;
+  width: 20px;
+  font-size: 18px;
+  border: solid black 2px;
+  background-color: rgb(223, 245, 249);
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.calculator-button:hover {
+  background-color: rgb(122, 232, 247);
+  transform: scale(1.1);
 }
