--- a/src/App.css
+++ b/src/App.css
@@ -22,27 +22,48 @@ html {
   background-color: aliceblue;
 }
 
-.calculator-body>div {
-  display: flex;
-  gap: 20px,
-}
-
 .input-logo {
   flex-direction: column;
 }
 
 .top-bar {
   display: flex;
+  flex-direction: column;
+  gap: 10px
+}
+
+.history-box {
+  background: none;
+  border: solid black 1px;
+  padding: 15px;
+  font-size: large;
+  border-radius: 10px;
+  box-shadow: inset 0 0 10px 1px rgba(var(--base-color-rgb), 0.25);
+  border: 2px solid rgba(var(--base-color-rgb), 0.4);
+  overflow: scroll;
+  overflow-x: hidden;
+  white-space: nowrap;
+  height: 20px
 }
 
 #calculator-input {
   background: none;
   border: none;
-  padding: 20px;
+  padding: 15px;
+  font-size: large;
   border-radius: 10px;
   box-shadow: inset 0 0 10px 1px rgba(var(--base-color-rgb), 0.25);
   border: 2px solid rgba(var(--base-color-rgb), 0.4);
-  width: 100%;
+}
+
+.button-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.calc-columns {
+  display: flex;
+  flex-direction: column;
 }
 
 #calculator-input:focus {
@@ -50,10 +71,11 @@ html {
 }
 
 .calculator-button {
-  flex: 1;
+  font-display: flex;
+  align-items: center;
+  padding: 10px;
   margin: 15px;
   border-radius: 8px;
-  width: 20px;
   font-size: 18px;
   border: solid black 2px;
   background-color: rgb(223, 245, 249);
